fix hero alignment

--- a/style.css
+++ b/style.css
@@ -567,7 +567,7 @@ footer {
     }
 
     .hero_title {
-        margin-top: 50px;
+        margin-top: 0;
         font-size: 4.8rem;
     }
 
